fixed GTest linkage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,6 @@ set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT $
 #ENABLE_LANGUAGE(ASM_MASM)
 add_executable(SVML_FirstTry SVML_Test.cpp )#sincos.asm)
 target_compile_features(SVML_FirstTry PRIVATE cxx_std_17)
-find_package(gtest REQUIRED)
-target_link_libraries(${PROJECT_NAME} PRIVATE GTest::gtest)
+find_package(GTest MODULE REQUIRED)
+target_link_libraries(SVML_FirstTry PRIVATE GTest::GTest GTest::Main)
 target_compile_options(SVML_FirstTry PRIVATE "/arch:AVX;/Oy;/Z7;/sdl-;/GS-;-flto;-fwhole-program-vtables")
