some changes how library linkage is achieved

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,20 +10,24 @@
 cmake_minimum_required (VERSION 3.9 FATAL_ERROR)
 include(GNUInstallDirs)
 
-project(Create_SVML_intrinsics CXX)
+project(SVML_intrinsics CXX)
 
-add_compile_options(
-    "$<$<CONFIG:Debug>:/MTd>"
-    "$<$<CONFIG:RelWithDebInfo>:/MT>"
-    "$<$<CONFIG:Release>:/MT>"
-    "$<$<CONFIG:MinSizeRel>:/MT>")
+#add_compile_options(
+#    "$<$<CONFIG:Debug>:/MTd>"
+#    "$<$<CONFIG:RelWithDebInfo>:/MT>"
+#    "$<$<CONFIG:Release>:/MT>"
+#    "$<$<CONFIG:MinSizeRel>:/MT>")
 set(BUILD_SHARED_LIBS FALSE)
 
 ##---------------------------------------------------------------------------------------##
 ##----- Target definition. 
 ##---------------------------------------------------------------------------------------##
-add_executable(${PROJECT_NAME} create_clang_svml_intrinsic.cpp)
+add_executable(${PROJECT_NAME}	create_clang_svml_intrinsic.h	create_clang_svml_intrinsic.cpp 
+								svml_assembly_creator.h			svml_assembly_creator.cpp
+								svml_test_creator.h				svml_test_creator.cpp		
+								)
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
+target_compile_options(${PROJECT_NAME} PRIVATE "/EHa;/MT$<$<CONFIG:Debug>:d>")
 
 find_package(Boost REQUIRED COMPONENTS program_options)
 target_link_libraries(${PROJECT_NAME} PRIVATE Boost::program_options)
@@ -31,8 +35,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE Boost::program_options)
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
 
 ##---------------------------------------------------------------------------------------##
-#ENABLE_LANGUAGE(ASM_MASM)
-add_executable(SVML_FirstTry SVML_Test.cpp aligned_array.h)#sincos.asm)
+add_executable(SVML_FirstTry SVML_Test.cpp)
 target_compile_features(SVML_FirstTry PRIVATE cxx_std_17)
 find_package(GTest MODULE REQUIRED)
 target_link_libraries(SVML_FirstTry PRIVATE GTest::GTest GTest::Main)
