fix linkage of other target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,4 +39,4 @@ add_executable(SVML_FirstTry SVML_Test.cpp)
 target_compile_features(SVML_FirstTry PRIVATE cxx_std_17)
 find_package(GTest MODULE REQUIRED)
 target_link_libraries(SVML_FirstTry PRIVATE GTest::GTest GTest::Main)
-target_compile_options(SVML_FirstTry PRIVATE "/arch:AVX;/Oy;/Z7;/sdl-;/GS-;-flto;-fwhole-program-vtables")
+target_compile_options(SVML_FirstTry PRIVATE "/MT$<$<CONFIG:Debug>:d>;/arch:AVX;/Oy;/Z7;/sdl-;/GS-;-flto;-fwhole-program-vtables")
